--- a/bikeshare/readme
+++ b/bikeshare/readme
@@ -1,2 +1,6 @@
 Different exercises based on the bikeshare program in Washington DC. 
 Includes geospatial analysis and graphical analysis.
+Done with Alexis Alexander
+
+The large project was on looking at bikeshare and taxi usage during and after COVID-19 to see if there was improvement.
+Done with Naida Torres, Claudia LaPlante, and David Paul.
