--- a/NYCFlights/readme
+++ b/NYCFlights/readme
@@ -1,2 +1,4 @@
 One of my first R projects.
 We look at flights in and out of NYC through the 3 different airports.
+
+Done with Naida Torres, Claudia LaPlant and David Paul
