--- a/readme
+++ b/readme
@@ -1,1 +1,5 @@
-Test text file for github
+All the projects I've done in 2023.
+Includes projects from DS241 and STAT383 at Clarkson University.
+
+- Need to add links to original repos
+- Need to add links to people who worked on the projects with me
