--- a/bikeshare/readme
+++ b/bikeshare/readme
@@ -4,3 +4,5 @@ Done with Alexis Alexander
 
 The large project was on looking at bikeshare and taxi usage during and after COVID-19 to see if there was improvement.
 Done with Naida Torres, Claudia LaPlante, and David Paul.
+
+Datasets are here: https://github.com/torresnr/bikeshare_23/tree/6aa0f2558d19fc015f2a08ba99c0541414ce281c/data_raw
